--- a/appointments-b.css
+++ b/appointments-b.css
@@ -31,7 +31,7 @@
 .appointments-container-name {
     font-size: 20px;
     font-family: 'PPNeueMontrealBook';
-    color: #868686;
+    color: black;
     margin-top: 0;
     margin-bottom: 12px;
 }
@@ -39,7 +39,7 @@
 .divider {
     height: 1px;
     width: 100%;
-    background-color: #DADADA;
+    background-color: blue;
     margin-top: 0;
     margin-bottom: 17px;
 }
@@ -48,7 +48,9 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 15px;
+    padding-bottom: 10px;
+    margin-bottom: 25px;
+    border-bottom: 3px dashed blue;
 }
 
 .appointment-date {
@@ -61,7 +63,8 @@
     margin-bottom: 0;
     text-align: right;
     font-size: 24px;
-    font-family: 'PPNeueMontrealThin';
+    font-weight: 1400;
+    font-family: 'PPNeueMontreal';
 }
 }
 
@@ -74,17 +77,19 @@
 .appointment-title, .appointment-text {
     margin-top: 0;
     margin-bottom: 0;
-    color: #868686;
+    color: black;
 }
 
 .appointment-title {
     font-size: 24px;
     font-family: 'PPNeueMontreal';
+    color: blue;
 }
 
 .appointment-text {
     font-size: 20px;
     font-family: 'PPNeueMontrealBook';
+    color:black;
 }
 }
 
@@ -95,7 +100,7 @@
     padding-left: 45%;
 
 .defunct-button, .working-button {
-    background-color: #D4E8FF;
+    background-color: blue;
     border: none;
     border-radius: 9px;
     width: 180px;
@@ -112,7 +117,7 @@
 .dialog-text {
     font-family: 'PPNeueMontrealBook';
     font-size: 20px;
-    color: #868686;
+    color: black;
     margin-top: 0px;
     margin-bottom: 10px;
 }
@@ -131,4 +136,20 @@
 .success-dialog::backdrop {
     background-color: black;
     opacity: 20%;
+}
+
+.username{
+    color: black;
+}
+
+.side-nav-section-header{
+    color: black;
+}
+
+.side-nav-section-row{
+    color: black;
+}
+
+.side-nav-section-text{
+    color: black;
 }
